--- a/pg-primary/config/postgresql.conf
+++ b/pg-primary/config/postgresql.conf
@@ -32,6 +32,12 @@ default_text_search_config = 'pg_catalog.english'
 # Replication
 wal_level = replica
 archive_mode = on
-archive_command = 'test ! -f /mnt/server/archivedir/%f && cp %p /mnt/server/archivedir/%f'
+# This command was gotten from documentation
+#archive_command = 'test ! -f /mnt/server/archivedir/%f && cp %p /mnt/server/archivedir/%f'
+archive_command = 'cp %p /mnt/server/archivedir/%f'
 max_wal_senders = 3
 hot_standby = on
+
+# Extensions
+# Add this line to specify that pg_cron should use our main database:
+cron.database_name = 'db'
